// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home renders renders the loading state 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "paddingBottom": 0,
        "paddingTop": 22,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 100,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 22,
          },
          Object {
            "backgroundColor": "#48466D",
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#48466D",
          "paddingBottom": 10,
          "paddingHorizontal": 15,
          "paddingTop": 10,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "rgba(0, 0, 0, 0.70)",
          "borderRadius": 5,
          "flex": 1,
          "flexDirection": "row",
          "height": 48,
          "opacity": 1,
          "paddingHorizontal": 15,
        }
      }
      testID="home.button.searchInput"
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "color": "#FFFFFF",
              "fontSize": 24,
              "marginRight": 7.5,
            },
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "Nunito-Regular",
            "fontSize": 17,
          }
        }
      >
        Search
      </Text>
    </View>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
          "paddingLeft": 15,
          "paddingVertical": 10,
        }
      }
      testID="home.button.info"
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "color": "#FFFFFF",
              "fontSize": 24,
            },
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={Object {}}
    style={Object {}}
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginHorizontal": 15,
            "marginVertical": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#212121",
              "fontFamily": "Nunito-SemiBold",
              "fontSize": 17,
            }
          }
        >
          Featured
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "height": 200,
            "justifyContent": "center",
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#3D84A8"
          hidesWhenStopped={true}
          size="large"
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginHorizontal": 15,
            "marginVertical": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#212121",
              "fontFamily": "Nunito-SemiBold",
              "fontSize": 17,
            }
          }
        >
          Closest to me
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "height": 200,
            "justifyContent": "center",
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#3D84A8"
          hidesWhenStopped={true}
          size="large"
        />
      </View>
    </View>
  </RCTScrollView>
  <TabBar />
</View>
`;

exports[`Home renders renders with minimum required props 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "paddingBottom": 0,
        "paddingTop": 22,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 100,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 22,
          },
          Object {
            "backgroundColor": "#48466D",
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#48466D",
          "paddingBottom": 10,
          "paddingHorizontal": 15,
          "paddingTop": 10,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "rgba(0, 0, 0, 0.70)",
          "borderRadius": 5,
          "flex": 1,
          "flexDirection": "row",
          "height": 48,
          "opacity": 1,
          "paddingHorizontal": 15,
        }
      }
      testID="home.button.searchInput"
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "color": "#FFFFFF",
              "fontSize": 24,
              "marginRight": 7.5,
            },
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "Nunito-Regular",
            "fontSize": 17,
          }
        }
      >
        Search
      </Text>
    </View>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
          "paddingLeft": 15,
          "paddingVertical": 10,
        }
      }
      testID="home.button.info"
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "color": "#FFFFFF",
              "fontSize": 24,
            },
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={Object {}}
    style={Object {}}
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginHorizontal": 15,
            "marginVertical": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#212121",
              "fontFamily": "Nunito-SemiBold",
              "fontSize": 17,
            }
          }
        >
          Featured
        </Text>
      </View>
      <PlaceList
        data={
          Array [
            Object {
              "address": "Stellenbosch, South Africa",
              "id": "1",
              "location": Object {
                "lat": -33.9263749,
                "lng": 18.9319848,
              },
              "name": "Bartinney Tasting Shed",
              "openingHours": Array [
                "Monday: 12:00 – 5:00 PM",
                "Tuesday: 12:00 – 5:00 PM",
                "Wednesday: 12:00 – 5:00 PM",
                "Thursday: 12:00 – 5:00 PM",
                "Friday: 12:00 – 8:00 PM",
                "Saturday: 10:00 AM – 12:30 PM",
                "Sunday: Closed",
              ],
              "phoneNumber": "021 885 1013",
              "photoReferences": Array [
                "CmRaAAAAF5bkjtj7bFEGaZqTN1_uZrJMvM6EEOFle3UIDd5JEbZwb281f2F4EH-XR1o6frihMiOzrJEx1KlczmV8o4qLrYygDZE-TKthSRT1SdzvrEQ6AjQbCG6sVeZBR48V0lMLEhDkpyqJh9O9z4Ai-7All7swGhQwTkHxJ77yIZ9d0c8oqWifUrL6eA",
              ],
              "website": "http://www.bartinney.co.za",
            },
          ]
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginHorizontal": 15,
            "marginVertical": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#212121",
              "fontFamily": "Nunito-SemiBold",
              "fontSize": 17,
            }
          }
        >
          Closest to me
        </Text>
      </View>
      <PlaceList
        data={
          Array [
            Object {
              "address": "Stellenbosch, South Africa",
              "id": "1",
              "location": Object {
                "lat": -33.9263749,
                "lng": 18.9319848,
              },
              "name": "Bartinney Tasting Shed",
              "openingHours": Array [
                "Monday: 12:00 – 5:00 PM",
                "Tuesday: 12:00 – 5:00 PM",
                "Wednesday: 12:00 – 5:00 PM",
                "Thursday: 12:00 – 5:00 PM",
                "Friday: 12:00 – 8:00 PM",
                "Saturday: 10:00 AM – 12:30 PM",
                "Sunday: Closed",
              ],
              "phoneNumber": "021 885 1013",
              "photoReferences": Array [
                "CmRaAAAAF5bkjtj7bFEGaZqTN1_uZrJMvM6EEOFle3UIDd5JEbZwb281f2F4EH-XR1o6frihMiOzrJEx1KlczmV8o4qLrYygDZE-TKthSRT1SdzvrEQ6AjQbCG6sVeZBR48V0lMLEhDkpyqJh9O9z4Ai-7All7swGhQwTkHxJ77yIZ9d0c8oqWifUrL6eA",
              ],
              "relativeDistance": 111.19492664455873,
              "website": "http://www.bartinney.co.za",
            },
          ]
        }
      />
    </View>
  </RCTScrollView>
  <TabBar />
</View>
`;
